Fix post separator visibility

--- a/styles/base.less
+++ b/styles/base.less
@@ -123,7 +123,7 @@ img[data-src] {
 // Hide elements using ContentRevealer until loaded
 html.sr {
   .post-list__item,
-  .post-header > *,
+  .post-header__content > *,
   .sqs-block-image .image-block-wrapper {
     visibility: hidden;
   }
